# books_rag_app

./: pyproject.toml
books_rag_app/: __init__.py  config.py  main.py
books_rag_app/routes/: post.py  user.py
